--- a/requirements.yml
+++ b/requirements.yml
@@ -2,5 +2,5 @@
   - src: git@github.com:netology-code/mnt-homeworks-ansible.git
     scm: git
     version: "1.0.1"
-    name: java 
+    name: mnt-homeworks-ansible
     key_file: ./secret
